add all singlesig importers to sp airgapped keystore import