@@ -26,12 +26,10 @@ public class HwAirgappedController extends KeystoreImportDetailController {
 
     public void initializeView() {
         List<KeystoreFileImport> fileImporters = Collections.emptyList();
-        if(getMasterController().getWallet().getPolicyType().equals(PolicyType.SINGLE_HD)) {
+        if(getMasterController().getWallet().getPolicyType().equals(PolicyType.SINGLE_HD) || getMasterController().getWallet().getPolicyType().equals(PolicyType.SINGLE_SP)) {
             fileImporters = List.of(new ColdcardSinglesig(), new CoboVaultSinglesig(), new Jade(), new KeystoneSinglesig(), new PassportSinglesig(), new SeedSigner(), new GordianSeedTool(), new SpecterDIY(), new Krux(), new AirGapVault(), new KeycardShellSinglesig());
         } else if(getMasterController().getWallet().getPolicyType().equals(PolicyType.MULTI_HD)) {
             fileImporters = List.of(new Bip129(), new ColdcardMultisig(), new CoboVaultMultisig(), new JadeMultisig(), new KeystoneMultisig(), new PassportMultisig(), new SeedSigner(), new GordianSeedTool(), new SpecterDIY(), new Krux(), new KeycardShellMultisig());
-        } else if(getMasterController().getWallet().getPolicyType().equals(PolicyType.SINGLE_SP)) {
-            fileImporters = List.of(new ColdcardSinglesig());
         }
 
         for(KeystoreFileImport importer : fileImporters) {
@@ -43,10 +41,7 @@ public class HwAirgappedController extends KeystoreImportDetailController {
             }
         }
 
-        List<KeystoreCardImport> cardImporters = Collections.emptyList();
-        if(getMasterController().getWallet().getPolicyType().equals(PolicyType.SINGLE_HD) || getMasterController().getWallet().getPolicyType().equals(PolicyType.MULTI_HD)) {
-            cardImporters = List.of(new Tapsigner(), new Satochip(), new Satschip(), new Keycard());
-        }
+        List<KeystoreCardImport> cardImporters = List.of(new Tapsigner(), new Satochip(), new Satschip(), new Keycard());
         for(KeystoreCardImport importer : cardImporters) {
             if(!importer.isDeprecated() || Config.get().isShowDeprecatedImportExport()) {
                 CardImportPane importPane = new CardImportPane(getMasterController().getWallet(), importer, getMasterController().getDefaultDerivation(), getMasterController().getRequiredDerivation());
